<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoomActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recherche catégorie:"/>

        <EditText
            android:id="@+id/edSearchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btnSearchCategory"
        android:onClick="btnSearchCategoriesClick"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="Rechercher"/>
    <TextView
        android:id="@+id/tvNbreCategories"
        android:text="nbCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/lvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>