...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Liste des produits:"/>

            <ListView
                android:id="@+id/lvProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
